--- a/AtkTennisWeb/Views/AdminHome/ReservationDebtList.cshtml
+++ b/AtkTennisWeb/Views/AdminHome/ReservationDebtList.cshtml
@@ -34,6 +34,7 @@
 
                                         <th>Üye Numarası</th>
                                         <th>Adı</th>
+                                        <th>Rolü</th>
                                         <th>Rezervasyon Tarihi</th>
                                         <th>Kort Adı </th>
                                         <th>Başlangıç Tarihi</th>
@@ -67,6 +68,7 @@
                                                     }
 
                                                     <td>@t.FullName</td>
+                                                    <td>@item.RoleName</td>
                                                     <td>@item.ResDate</td>
                                                     <td>@courtName</td>
                                                     <td>@item.ResStartTime</td>
@@ -100,6 +102,7 @@
 
                                         <th>Üye Numarası</th>
                                         <th>Adı</th>
+                                        <th>Rolü</th>
                                         <th>Rezervasyon Tarihi</th>
                                         <th>Kort Adı </th>
                                         <th>Başlangıç Tarihi</th>
@@ -133,6 +136,7 @@
                                                     }
 
                                                     <td>@t.FullName</td>
+                                                    <td>@item.RoleName</td>
                                                     <td>@item.ResDate</td>
                                                     <td>@courtName</td>
                                                     <td>@item.ResStartTime</td>
