--- a/AtkTennisWeb/Views/Shared/_Layout.cshtml
+++ b/AtkTennisWeb/Views/Shared/_Layout.cshtml
@@ -701,6 +701,15 @@
 
                                 <ul class="nav nav-treeview">
                                     <li class="nav-item">
+                                        <a href="~/Report/GelirRaporu" class="nav-link">
+                                            <i class="fas fa-id-card nav-icon"></i>
+                                            <p>Gelir Raporu </p>
+                                        </a>
+                                    </li>
+                                </ul>
+
+                                <ul class="nav nav-treeview">
+                                    <li class="nav-item">
                                         <a href="~/Report/CourtOccupancyReports" class="nav-link">
                                             <i class="nav-icon fas fa-chart-pie"></i>
                                             <p>Kort Doluluk Raporları </p>
@@ -924,7 +933,7 @@
 
                             if (res) {
                                 swal({
-                                    text: "Sn." + $('#fullnm').text() + "  " + "Hoşgeldiniz" ,
+                                    text: "Sn." + $('#fullnm').text() + "  " + "Hoşgeldiniz",
                                     icon: "success",
                                     button: "Tamam",
                                 })
