--- a/AtkTennisWeb/Views/AdminHome/ListMember.cshtml
+++ b/AtkTennisWeb/Views/AdminHome/ListMember.cshtml
@@ -82,60 +82,60 @@
                                     {
                                         if (item.ActPas == true && item.CompanyId == CompId)
                                         {
-                                    <tr style="text-align:center" id="">
+                                            <tr style="text-align:center" id="">
 
-                                        <td>@item.MemberNumber</td>
-                                        <td>@item.NickName</td>
-                                        <td>@item.FullName</td>
-                                        <td>@item.Email</td>
-                                        <td>@item.Phone</td>
-                                        <td>Asil Üye</td>
-                                        @{
-                                            var cond = "";
-                                        }
+                                                <td>@item.MemberNumber</td>
+                                                <td>@item.NickName</td>
+                                                <td>@item.FullName</td>
+                                                <td>@item.Email</td>
+                                                <td>@item.Phone</td>
+                                                <td>Asil Üye</td>
+                                                @{
+                                                    var cond = "";
+                                                }
 
-                                        @if (item.Condition == "1")
-                                        {
-                                            cond = "Faal";
-                                        }
-                                        else if (item.Condition == "2")
-                                        {
-                                            cond = "Çıkan";
-                                        }
-                                        else if (item.Condition == "3")
-                                        {
-                                            cond = "Dondurulmuş";
-                                        }
-                                        else if (item.Condition == "4")
-                                        {
-                                            cond = "Fahri";
-                                        }
-                                        else if (item.Condition == "5")
-                                        {
-                                            cond = "İstifa";
-                                        }
-                                        else if (item.Condition == "6")
-                                        {
-                                            cond = "Onur";
-                                        }
-                                        else if (item.Condition == "7")
-                                        {
-                                            cond = "Vefat";
-                                        }
-                                        else
-                                        {
-                                            cond = "Belirtilmemiş";
-                                        }
-                                        <td>@cond</td>
+                                                @if (item.Condition == "1")
+                                                {
+                                                    cond = "Faal";
+                                                }
+                                                else if (item.Condition == "2")
+                                                {
+                                                    cond = "Çıkan";
+                                                }
+                                                else if (item.Condition == "3")
+                                                {
+                                                    cond = "Dondurulmuş";
+                                                }
+                                                else if (item.Condition == "4")
+                                                {
+                                                    cond = "Fahri";
+                                                }
+                                                else if (item.Condition == "5")
+                                                {
+                                                    cond = "İstifa";
+                                                }
+                                                else if (item.Condition == "6")
+                                                {
+                                                    cond = "Onur";
+                                                }
+                                                else if (item.Condition == "7")
+                                                {
+                                                    cond = "Vefat";
+                                                }
+                                                else
+                                                {
+                                                    cond = "Belirtilmemiş";
+                                                }
+                                                <td>@cond</td>
 
-                                        <td>
+                                                <td>
 
-                                            <button class="btn btn-outline-warning" onclick="window.location.href = 'MemberDetailPage?memberNum=@item.MemberNumber'"><i class="fas fa-search"></i></button>
-                                            <button class="btn btn-outline-danger" id="@item.UserId" onclick="openDeleteUserModal(this.id) "><i class="fas fa-trash"></i></button>
+                                                    <button class="btn btn-outline-warning" onclick="window.location.href = 'MemberDetailPage?memberNum=@item.MemberNumber'"><i class="fas fa-search"></i></button>
+                                                    <button class="btn btn-outline-danger" id="@item.UserId" onclick="openDeleteUserModal(this.id) "><i class="fas fa-trash"></i></button>
 
-                                        </td>
+                                                </td>
 
-                                    </tr>
+                                            </tr>
                                         }
 
                                     }
@@ -176,63 +176,159 @@
                                         if (item.ActPas == true && item.CompanyId == CompId && item.memberType == 1)
                                         {
 
-                                    <tr style="text-align:center" id="">
+                                            <tr style="text-align:center" id="">
 
-                                        <td>@item.MemberNumber</td>
-                                        <td>@item.NickName</td>
-                                        <td>@item.FullName</td>
-                                        <td>@item.Email</td>
-                                        <td>@item.Phone</td>
-                               
-                                        @{ 
-                                            var cond = "";
+                                                <td>@item.MemberNumber</td>
+                                                <td>@item.NickName</td>
+                                                <td>@item.FullName</td>
+                                                <td>@item.Email</td>
+                                                <td>@item.Phone</td>
+
+                                                @{
+                                                    var cond = "";
+                                                }
+
+                                                @if (item.Condition == "1")
+                                                {
+                                                    cond = "Faal";
+                                                }
+                                                else if (item.Condition == "2")
+                                                {
+                                                    cond = "Çıkan";
+                                                }
+                                                else if (item.Condition == "3")
+                                                {
+                                                    cond = "Dondurulmuş";
+                                                }
+                                                else if (item.Condition == "4")
+                                                {
+                                                    cond = "Fahri";
+                                                }
+                                                else if (item.Condition == "5")
+                                                {
+                                                    cond = "İstifa";
+                                                }
+                                                else if (item.Condition == "6")
+                                                {
+                                                    cond = "Onur";
+                                                }
+                                                else if (item.Condition == "7")
+                                                {
+                                                    cond = "Vefat";
+                                                }
+                                                else
+                                                {
+                                                    cond = "Belirtilmemiş";
+                                                }
+                                                <td>Geçici Üye</td>
+                                                <td>@cond</td>
+
+
+
+                                                <td>
+
+                                                    <button class="btn btn-outline-warning" onclick="window.location.href = 'MemberDetailPage?memberNum=@item.MemberNumber'"><i class="fas fa-search"></i></button>
+                                                    <button class="btn btn-outline-danger" id="@item.UserId" onclick="openDeleteUserModal(this.id) "><i class="fas fa-trash"></i></button>
+
+                                                </td>
+
+                                            </tr>
                                         }
 
-                                        @if (item.Condition == "1")
-                                        {
-                                             cond = "Faal";
-                                        }
-                                        else if (item.Condition == "2")
-                                        {
-                                             cond = "Çıkan";
-                                        }
-                                        else if (item.Condition == "3")
-                                        {
-                                             cond = "Dondurulmuş";
-                                        }
-                                        else if (item.Condition == "4")
-                                        {
-                                             cond = "Fahri";
-                                        }
-                                        else if (item.Condition == "5")
-                                        {
-                                             cond = "İstifa";
-                                        }
-                                        else if (item.Condition == "6")
-                                        {
-                                             cond = "Onur";
-                                        }
-                                        else if (item.Condition == "7")
-                                        {
-                                             cond = "Vefat";
-                                        }
-                                        else
-                                        {
-                                             cond = "Belirtilmemiş";
-                                        }
-                                        <td>Geçici Üye</td>
-                                        <td>@cond</td>
+                                    }
 
 
+                                </tbody>
+                            </table>
+                        </div>
 
-                                        <td>
+                    </div>
 
-                                            <button class="btn btn-outline-warning" onclick="window.location.href = 'MemberDetailPage?memberNum=@item.MemberNumber'"><i class="fas fa-search"></i></button>
-                                            <button class="btn btn-outline-danger" id="@item.UserId" onclick="openDeleteUserModal(this.id) "><i class="fas fa-trash"></i></button>
+                    <div class="card">
 
-                                        </td>
+                        <div class="col-sm-6">
+                            <h5>Fahri Üyeler</h5>
+                        </div>
+
+                        <div class="card-body">
+                            <table id="example3" class="table table-bordered table-hover">
+                                <thead>
+                                    <tr style="text-align:center">
+                                        <th>Üye Numarası</th>
+                                        <th>Kodu</th>
+                                        <th>Adı - Soyadı</th>
+                                        <th>E-Posta</th>
+                                        <th>Telefon Numarası</th>
+                                        <th>Üyelik Türü</th>
+                                        <th>Durumu</th>
+
+                                        <th>İşlemler</th>
 
                                     </tr>
+                                </thead>
+                                <tbody>
+
+                                    @foreach (var item in Model.memberLists)
+                                    {
+                                        if (item.ActPas == true && item.CompanyId == CompId && item.memberType == 0 && item.Condition == "4")
+                                        {
+                                            <tr style="text-align:center" id="">
+
+                                                <td>@item.MemberNumber</td>
+                                                <td>@item.NickName</td>
+                                                <td>@item.FullName</td>
+                                                <td>@item.Email</td>
+                                                <td>@item.Phone</td>
+
+                                                @{
+                                                    var cond = "";
+                                                }
+
+                                                @if (item.Condition == "1")
+                                                {
+                                                    cond = "Faal";
+                                                }
+                                                else if (item.Condition == "2")
+                                                {
+                                                    cond = "Çıkan";
+                                                }
+                                                else if (item.Condition == "3")
+                                                {
+                                                    cond = "Dondurulmuş";
+                                                }
+                                                else if (item.Condition == "4")
+                                                {
+                                                    cond = "Fahri";
+                                                }
+                                                else if (item.Condition == "5")
+                                                {
+                                                    cond = "İstifa";
+                                                }
+                                                else if (item.Condition == "6")
+                                                {
+                                                    cond = "Onur";
+                                                }
+                                                else if (item.Condition == "7")
+                                                {
+                                                    cond = "Vefat";
+                                                }
+                                                else
+                                                {
+                                                    cond = "Belirtilmemiş";
+                                                }
+                                                <td>Geçici Üye</td>
+                                                <td>@cond</td>
+
+
+
+                                                <td>
+
+                                                    <button class="btn btn-outline-warning" onclick="window.location.href = 'MemberDetailPage?memberNum=@item.MemberNumber'"><i class="fas fa-search"></i></button>
+                                                    <button class="btn btn-outline-danger" id="@item.UserId" onclick="openDeleteUserModal(this.id) "><i class="fas fa-trash"></i></button>
+
+                                                </td>
+
+                                            </tr>
                                         }
 
                                     }
@@ -575,14 +671,11 @@
     $(document).ready(function () {
 
 
-
         $('#datemask').inputmask('dd/mm/yyyy', { 'placeholder': 'dd/mm/yyyy' })
         $('[data-mask]').inputmask()
         $('#reservationdate').datetimepicker({
             format: 'L'
         });
-
-
 
         $("#example1").DataTable({
             "responsive": true, "lengthChange": false, "autoWidth": false,
@@ -593,6 +686,11 @@
             "responsive": true, "lengthChange": false, "autoWidth": false,
             "buttons": [/*"copy", "csv", "excel",*/ "pdf", "print"/*, "colvis"*/]
         }).buttons().container().appendTo('#example2_wrapper .col-md-6:eq(0)');
+
+        $("#example3").DataTable({
+            "responsive": true, "lengthChange": false, "autoWidth": false,
+            "buttons": [/*"copy", "csv", "excel",*/ "pdf", "print"/*, "colvis"*/]
+        }).buttons().container().appendTo('#example3_wrapper .col-md-6:eq(0)');
 
 
 
