--- a/AtkTennisWeb/Views/Report/DebtReports.cshtml
+++ b/AtkTennisWeb/Views/Report/DebtReports.cshtml
@@ -220,8 +220,8 @@
                             }   
                         }
                     }
-
                 }
+
                 row += '</tbody>';
                 row += '</table>';
                 row += '</div>';
@@ -526,10 +526,10 @@
                         else {
                             row += '<td style="background-color:#EF5350">' + res.duesInf[i].paymentLog.refId + '</td>';
                         }
-
+                        debugger;
                         row += '<td>' + memberInf[0].memberNumber + '</td>';
                         row += '<td>' + memberInf[0].fullName + '</td>';
-                        row += '<td>' + memberInf[0].fullName + '</td>';
+                        row += '<td>' + res.duesInf[i].res.roleName + '</td>';
                         row += '<td>' + "Rezervasyon Ödemesi" + '</td>';
                         row += '<td>' + res.duesInf[i].res.resDate + '</td>';
                         row += '<td style="font-weight:bold">' + res.duesInf[i].paymentLog.price + "₺" + '</td>';
